RESOLVED FIXED174237
Fix bad usage of static variables in ResourceLoadStatisticsStore
https://bugs.webkit.org/show_bug.cgi?id=174237
Summary Fix bad usage of static variables in ResourceLoadStatisticsStore
Chris Dumez
Reported 2017-07-06 20:45:59 PDT
Fix bad usage of static variables in ResourceLoadStatisticsStore. Those can be set via member functions on ResourceLoadStatisticsStore so they should be data members. The API to set them is associated to a particular store and there can in theory be several stores.
Attachments
Patch (6.97 KB, patch)
2017-07-06 20:47 PDT, Chris Dumez
no flags
Patch (6.96 KB, patch)
2017-07-06 20:48 PDT, Chris Dumez
no flags
Patch (6.97 KB, patch)
2017-07-06 20:50 PDT, Chris Dumez
no flags
Patch (7.07 KB, patch)
2017-07-06 21:41 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-07-06 20:47:44 PDT
Chris Dumez
Comment 2 2017-07-06 20:48:25 PDT
Chris Dumez
Comment 3 2017-07-06 20:50:31 PDT
Brent Fulgham
Comment 4 2017-07-06 21:36:07 PDT
Comment on attachment 314809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314809&action=review > Source/WebKit2/UIProcess/Storage/ResourceLoadStatisticsStore.cpp:263 > + m_timeToLiveUserInteraction = seconds; These are all fine, but I would have preferred an early return for < 0 in the original version.
Chris Dumez
Comment 5 2017-07-06 21:41:39 PDT
WebKit Commit Bot
Comment 6 2017-07-06 22:19:16 PDT
Comment on attachment 314813 [details] Patch Clearing flags on attachment: 314813 Committed r219242: <http://trac.webkit.org/changeset/219242>
WebKit Commit Bot
Comment 7 2017-07-06 22:19:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.