Fix bad usage of static variables in ResourceLoadStatisticsStore https://bugs.webkit.org/show_bug.cgi?id=174237

Reviewed by Brent Fulgham.

Fix bad usage of static variables in ResourceLoadStatisticsStore. Those can be set via
member functions on ResourceLoadStatisticsStore so they should be data members. The
API to set them is associated to a particular store and there can in theory be several
stores.

* UIProcess/Storage/ResourceLoadStatisticsStore.cpp:
(WebKit::ResourceLoadStatisticsStore::shouldPartitionCookies):
(WebKit::ResourceLoadStatisticsStore::setTimeToLiveUserInteraction):
(WebKit::ResourceLoadStatisticsStore::setTimeToLiveCookiePartitionFree):
(WebKit::ResourceLoadStatisticsStore::setMinimumTimeBetweenDataRecordsRemoval):
(WebKit::ResourceLoadStatisticsStore::setGrandfatheringTime):
(WebKit::ResourceLoadStatisticsStore::hasHadRecentUserInteraction):
(WebKit::ResourceLoadStatisticsStore::handleFreshStartWithEmptyOrNoStore):
(WebKit::ResourceLoadStatisticsStore::shouldRemoveDataRecords):
(WebKit::shouldPartitionCookies): Deleted.
* UIProcess/Storage/ResourceLoadStatisticsStore.h:


Canonical link: https://commits.webkit.org/191085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219242 268f45cc-cd09-0410-ab3c-d52691b4dbfc